sample card (for now), fix alignment of templates

--- a/app/assets/stylesheets/card_maker/card_manager.scss
+++ b/app/assets/stylesheets/card_maker/card_manager.scss
@@ -755,7 +755,7 @@ $species-search-card-width: 170px;
 
 .cardTemplates {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   padding: 25px 0;
 }
 
